Refactor validation data classes