@@ -2,37 +2,15 @@ package sales.core.validation;
 
 public class ProductValidator {
 
-    public sealed interface ProductData {
-
-        record Unvalidated(
-                String name,
-                int categoryId,
-                String categoryName,
-                double price,
-                int unitsInStock,
-                boolean discontinued
-        ) implements ProductData {}
-
-        record Validated(
-                String name,
-                int categoryId,
-                String categoryName,
-                double price,
-                int unitsInStock,
-                boolean discontinued
-        ) implements ProductData {}
-
-    }
-
     public sealed interface Result {
-        record Pass(ProductData.Validated validatedProduct) implements Result {}
+        record Pass(ProductData.Validated validatedProductData) implements Result {}
         record Fail(ValidationMessages messages) implements Result {}
     }
 
     public static Result validate(ProductData.Unvalidated product) {
         String name = product.name();
         var messages = new ValidationMessages();
-        if (name.trim().isEmpty()) {
+        if (name.trim().isBlank()) {
             messages.add("name", "Product name is required.");
         }
 
@@ -52,7 +30,6 @@ public class ProductValidator {
             return new Result.Pass(new ProductData.Validated(
                     name.trim(),
                     product.categoryId(),
-                    product.categoryName(),
                     product.price(),
                     product.unitsInStock(),
                     product.discontinued()
